more updates to the clients, more python unit tests
