# v2/nodejs/api/swagger.json
@@ -1603,7 +1603,52 @@
       "default" : false
     }
   }
-},"Article": { },"Articleresponse": {
+},"Article": {
+  "properties" : {
+    "_id" : {
+      "type" : "string"
+    },
+    "created_at" : {
+      "type" : "string"
+    },
+    "title" : {
+      "type" : "string"
+    },
+    "open_calais_topics" : {
+      "type" : "string"
+    },
+    "open_calais_keywords" : {
+      "type" : "string"
+    },
+    "vestorly_topics" : {
+      "type" : "string"
+    },
+    "categories" : {
+      "type" : "string"
+    },
+    "summary" : {
+      "type" : "string"
+    },
+    "unparsed_html" : {
+      "type" : "string"
+    },
+    "logo_url" : {
+      "type" : "string"
+    },
+    "image_url" : {
+      "type" : "string"
+    },
+    "url" : {
+      "type" : "string"
+    },
+    "external_url" : {
+      "type" : "string"
+    },
+    "tags" : {
+      "type" : "string"
+    }
+  }
+},"Articleresponse": {
   "properties" : {
     "article" : {
       "$ref" : "#/definitions/Article"
